# AutoClaw

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  AGENTS.md.old  LICENSE  Makefile  README.md  ROADMAP.md  STYLE.md  STYLE.md.old  docker-compose.host-openclaw.yml  docker-compose.yml  next.md  pyproject.toml  pyrightconfig.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260413_0001_initial_kernel.py  20260414_0001_fresh_initial_schema.py  20260416_0002_expand_checkpoint_recommended_next_action.py  20260417_0003_task_resource_truth.py  20260418_0004_registry_definition_write_audit.py  20260419_0001_fresh_phase13a_schema.py  b551dd0a1ba6_detect_schema_drift.py
apps/api/app/: cli.py  cli_support.py  config.py  file_entrypoints.py  main.py  paths.py
apps/api/app/api/: __init__.py  deps.py  errors.py  router.py  runtime_exception_mapping.py
apps/api/app/cli/: __init__.py  context.py  errors.py  failure_output.py  help.py  json_output.py  main.py  prompts.py  render.py  root.py  root_support.py  theme.py
apps/api/app/cli_commands/: bootstrap.py  definitions.py  openclaw_support.py  openclaw_wrapper.py  operator.py  server_config.py  service.py  task_compose.py
apps/api/app/compiler/: __init__.py  compile.py  contracts.py  lookup.py  lower.py  models.py  nesting.py  normalize.py  parse.py  plan_hash.py  resolve.py  role_policy_lookup.py  service.py  validate.py
apps/api/app/core/: __init__.py  enums.py  errors.py  ids.py  settings.py
apps/api/app/db/: __init__.py  base.py  session.py  types.py
apps/api/app/integrations/: github.py  notion.py  openclaw.py
apps/api/app/registry/: __init__.py  audit.py  current.py  definition_catalog.py  definition_history.py  lookup.py  openclaw_skills.py  policies.py  publish.py  query.py  revision_upsert.py  roles.py  seeds.py  service.py  support.py  task_start.py  upsert.py  validate.py  workflows.py
apps/api/app/runtime/: __init__.py  approvals.py  bootstrap.py  callback_bindings.py  checkpoints.py  context_visibility.py  contracts.py  control.py  dispatcher.py  ids.py  lookup.py  packaging.py  post_commit.py  projector.py  read_models.py  render.py  replan.py  resources.py  runner.py  scheduler.py  state.py  task_root_localization.py  task_root_writes.py  watchdog.py  watchdog_queries.py  watchdog_service.py
apps/api/app/schemas/: compiler.py  definitions.py  operation_failure.py  registry.py  registry_definitions.py  runtime.py  workflow_definitions.py  workflow_validation.py
apps/api/app/service_managers/: __init__.py  base.py  factory.py  launchd.py  schtasks.py  systemd.py
apps/api/app/services/: compiler_service.py  openclaw_bridge.py  registry_service.py  run_service.py  task_service.py
apps/api/app/terminal/: note.py  output.py  prompt_style.py  prompts.py  theme.py
apps/api/autoclaw/: __init__.py  cli.py  main.py
apps/api/autoclaw/openclaw/: __init__.py  bindings.py  common.py  mcp_operation_failures.py  node_server.py  operator_server.py  tool_teaching.py
apps/api/src/autoclaw/: __init__.py  config.py  main.py  paths.py
apps/api/tests/: conftest.py  helpers.py  run_integration_groups.sh
apps/api/tests/e2e/: phase3_normal_lane_flow.py  phase3_normal_lane_readback.py  phase3_normal_lane_support.py  test_phase2_minimal_runtime_lane.py  test_phase3_normal_lane.py
apps/api/tests/helpers/: catalog_seed.py  definition_registry_runtime.py  dispatch_wait_support.py  executor_harness.py  launch_foundation.py  lineage_seed.py  openclaw_cli.py  openclaw_gateway_support.py  operator_auth_headers.py  operator_trace_readback.py  parent_first_lane.py  parent_first_lane_readback.py  parent_first_lane_runtime.py  runtime_dispatch_progression.py  runtime_init_cache.py  runtime_route_seed_support.py  runtime_seed.py  runtime_test_config.py  runtime_wait_effects.py  seeded_runtime_support.py  support_state_shapes.py  workflow_lane_driver.py
apps/api/tests/integration/: conftest.py  phase2_runtime_bootstrap_support.py  phase3_runtime_contract_assignment_cases.py  phase3_runtime_contract_callback_cases.py  phase3_runtime_contract_error_cases.py  phase3_runtime_contract_replan_cases.py  phase3_runtime_control_abort_cases.py  phase3_runtime_control_boundary_cases.py  phase3_runtime_db_actions.py  phase3_runtime_db_assign_child_cases.py  phase3_runtime_db_checkpoint_cases.py  phase3_runtime_db_context.py  phase3_runtime_db_prompt_cases.py  phase3_runtime_db_release_cases.py  phase3_runtime_db_release_flow_case.py  phase3_runtime_db_release_root_cases.py  phase3_runtime_db_replan_authority_cases.py  phase3_runtime_db_replan_cases.py  phase3_runtime_db_replan_lineage_cases.py  phase3_runtime_db_support.py  phase3_runtime_db_workflows.py  phase3_runtime_dispatch_support.py  phase3_runtime_routes_guidance_contract.py  phase3_runtime_routes_observability_support.py  phase3_runtime_routes_query_contract.py  phase3_runtime_routes_support.py  phase3_runtime_routes_surface_contract.py  phase3_runtime_support.py  runtime_schema_contract_database_tests.py  runtime_schema_contract_guard_tests.py  runtime_schema_contract_model_tests.py  runtime_schema_contract_seed_runtime_support.py  runtime_schema_contract_seed_support.py  test_compiler_api.py  test_compiler_resource_semantics.py  test_compiler_service_db.py  test_console_packaging.py  test_db_reset_db.py  test_definition_registry_db.py  test_definition_registry_db_concurrency.py  (+26 more)
apps/api/tests/unit/: __init__.py  definition_schema_test_support.py  test_callback_bindings.py  test_cli.py  test_config.py  test_definition_schemas.py  test_definition_schemas_catalog.py  test_definition_schemas_examples.py  test_definition_schemas_role_policy.py  test_definition_schemas_workflow.py  test_docs_contract.py  test_docs_freeze.py  test_effective_node_merge.py  test_flow_boundaries.py  test_health.py  test_id_helpers.py  test_local_http_admission.py  test_main_lifespan_runtime.py  test_openclaw_integration.py  test_package_entrypoints.py  (+19 more)
(+2715 files in other folders)
