[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoclaw"
version = "0.1.1"
description = "AutoClaw local-first workflow control plane"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "click>=8.1.6,<9.0.0",
  "rich>=13.7.1,<14.0.0",
  "fastapi>=0.115.12,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "pydantic>=2.11.3,<3.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "mcp>=1.27.1,<2.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "httpx>=0.28.1,<1.0.0",
  "platformdirs>=4.3.7,<5.0.0",
  "aiosqlite>=0.21.0,<1.0.0",
]

[project.optional-dependencies]
postgres = [
  "asyncpg>=0.30.0,<1.0.0",
]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.26.0,<1.0.0",
  "pytest-cov>=6.1.1,<7.0.0",
  "ruff>=0.11.5,<1.0.0",
  "mypy>=1.15.0,<2.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "types-PyYAML>=6.0.12.20250326,<7.0.0",
  "asyncpg>=0.30.0,<1.0.0",
]

[project.scripts]
autoclaw = "autoclaw.cli:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "apps/api/src"}
packages = [
  "autoclaw",
  "autoclaw.api",
  "autoclaw.api.routes",
  "autoclaw.cli",
  "autoclaw.cli.commands",
  "autoclaw.cli.commands.openclaw",
  "autoclaw.cli.terminal",
  "autoclaw.compiler",
  "autoclaw.db",
  "autoclaw.db.models",
  "autoclaw.db.models.runtime",
  "autoclaw.db.models.runtime.assignment",
  "autoclaw.db.models.runtime.dispatch",
  "autoclaw.db.models.runtime.flow",
  "autoclaw.integrations",
  "autoclaw.integrations.openclaw",
  "autoclaw.integrations.openclaw.gateway",
  "autoclaw.integrations.openclaw.node_mcp",
  "autoclaw.integrations.openclaw.operator_mcp",
  "autoclaw.openclaw",
  "autoclaw.openclaw.node_mcp",
  "autoclaw.openclaw.operator_mcp",
  "autoclaw.platform",
  "autoclaw.platform.managed_services",
  "autoclaw.platform.managed_services.resources",
  "autoclaw.registry",
  "autoclaw.registry.revisions",
  "autoclaw.registry.seed_definitions",
  "autoclaw.runtime",
  "autoclaw.runtime.control",
  "autoclaw.runtime.control.assignment",
  "autoclaw.runtime.control.boundary",
  "autoclaw.runtime.control.checkpoint",
  "autoclaw.runtime.control.dispatch",
  "autoclaw.runtime.control.dispatch.gateway",
  "autoclaw.runtime.control.dispatch.openclaw_runtime",
  "autoclaw.runtime.control.flow",
  "autoclaw.runtime.control.release",
  "autoclaw.runtime.effects",
  "autoclaw.runtime.launch",
  "autoclaw.runtime.launch.bootstrap",
  "autoclaw.runtime.launch.persistence",
  "autoclaw.runtime.openclaw",
  "autoclaw.runtime.projection",
  "autoclaw.runtime.projection.dispatch",
  "autoclaw.runtime.projection.manifest",
  "autoclaw.runtime.prompt",
  "autoclaw.runtime.prompt.assets",
  "autoclaw.runtime.prompt.sections",
  "autoclaw.runtime.replan",
  "autoclaw.runtime.task_root",
  "autoclaw.runtime.watchdog",
  "autoclaw.schemas",
  "autoclaw.schemas.definitions",
  "autoclaw.schemas.runtime",
  "autoclaw.schemas.runtime.contracts",
]

[tool.setuptools.package-data]
autoclaw = [
  "platform/managed_services/resources/systemd/*.service",
  "registry/seed_definitions/policies/*.yaml",
  "registry/seed_definitions/roles/*.yaml",
  "registry/seed_definitions/workflows/*.yaml",
  "runtime/prompt/assets/*.json",
  "runtime/prompt/assets/blocks/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "RUF"]
ignore = ["UP047"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
