[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoclaw"
version = "0.1.8"
description = "Local-first orchestration tool for delegated AI work"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Leo Zhang", email = "yzha0012@uni.sydney.edu.au" },
]
maintainers = [
  { name = "Leo Zhang", email = "yzha0012@uni.sydney.edu.au" },
]
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.6,<9.0.0",
  "rich>=13.7.1,<14.0.0",
  "fastapi>=0.115.12,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "pydantic>=2.11.3,<3.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "jsonschema>=4.25.0,<5.0.0",
  "mcp>=1.27.1,<2.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "httpx>=0.28.1,<1.0.0",
  "platformdirs>=4.3.7,<5.0.0",
  "aiosqlite>=0.21.0,<1.0.0",
  "openai-codex==0.144.4",
  "claude-agent-sdk==0.2.122",
]

[project.optional-dependencies]
postgres = [
  "asyncpg>=0.30.0,<1.0.0",
]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.26.0,<1.0.0",
  "pytest-cov>=6.1.1,<7.0.0",
  "build>=1.2.2,<2.0.0",
  "ruff>=0.11.5,<1.0.0",
  "mypy>=1.15.0,<2.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "types-PyYAML>=6.0.12.20250326,<7.0.0",
  "asyncpg>=0.30.0,<1.0.0",
]

[project.scripts]
autoclaw = "autoclaw.interfaces.cli.main:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "apps/api/src"}

[tool.setuptools.packages.find]
where = ["apps/api/src"]
include = ["autoclaw*"]
namespaces = false

[tool.setuptools.package-data]
autoclaw = [
  "definitions/seeds/policies/*.yaml",
  "definitions/seeds/roles/*.yaml",
  "definitions/seeds/workflows/*.yaml",
  "interfaces/web_console/assets/*",
  "interfaces/web_console/assets/assets/*",
  "platform/managed_services/resources/systemd/*.service",
  "runtime/prompt/assets/instructions/shared/*.md",
  "runtime/prompt/assets/instructions/families/*.md",
]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "RUF"]
ignore = ["UP047"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
